# PhotoShare

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_04_08_1141-41c1e2a06212_create_users_table.py  2026_04_08_1224-06784cc203a6_create_users_table.py  2026_04_15_1322-b28cd8266ddd_add_username_in_users_table.py  2026_04_16_1110-74cb36a94193_add_timestamps_to_user.py  2026_05_05_1121-99d037b093b3_add_user_s_role.py  2026_05_05_1228-d98fe461b063_fix_timestamps_timezone.py  2026_05_05_1312-44f8c0b9a47b_add_server_default_to_timestamps.py  2026_05_06_1045-080847371067_add_default_to_timestamps.py
auth/: dependencies.py  service.py  utils_jwt.py
src/photoshare/: .env.template  main.py
src/photoshare/api/: __init__.py  router.py
src/photoshare/api/api_v1/: __init__.py  router.py  users.py
src/photoshare/api/api_v1/auth/: auth.py
src/photoshare/api/api_v1/crud/: users.py
src/photoshare/api/api_v1/demo_auth/: demo_jwt_auth.py
src/photoshare/core/: config.py
src/photoshare/core/models/: __init__.py  base.py  db_helper.py  mixins.py  user.py
src/photoshare/schemas/: __init__.py  enums.py  token.py  user.py
src/photoshare/utils/: __init__.py
