[project]
name = "photoshare"
version = "0.1.0"
description = ""
authors = [
    {name = "JuliMik",email = "gusachenkojulia@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standart] (>=0.42.0,<0.43.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
